--- a/style/main.css
+++ b/style/main.css
@@ -96,14 +96,14 @@ h2 {
   overflow: hidden;
 }
 
-section h2 {
+.section-title {
   height: 20rem;
   width: 20rem;
   margin: 0;
   padding: 2.5rem;
   position: absolute;
   bottom: -3rem;
-  left: -2rem;
+  right: -2rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -113,10 +113,14 @@ section h2 {
   font-size: 2.5rem;
 }
 
-.anchor {
+.absolute-anchor {
   display: block;
   position: absolute;
   top: -4rem;
+  visibility: hidden;
+}
+
+.anchor {
   visibility: hidden;
 }
 
@@ -391,4 +395,38 @@ section h2 {
   background-repeat: no-repeat;
   border-radius: 50%;
   border: 20px solid #dcdcdc;
+}
+
+.steps-container {
+  padding: 3rem;
+  background: var(--blue);
+}
+
+.steps-container p {
+  color: white;
+}
+
+.steps-container p:not(:last-child) {
+  margin-bottom: 1.5rem;
+}
+
+.steps-container p:nth-child(2n + 1) {
+  margin-right: 5rem;
+}
+
+.steps-container p:nth-child(2n) {
+  margin-left: 5rem;
+  text-align: right;
+}
+
+.who h2 {
+  height: unset;
+  width: unset;
+  position: relative;
+  text-align: center;
+  font-size: 2.5rem;
+}
+
+.who-container {
+  padding: 3rem;
 }
