--- a/style/slide.css
+++ b/style/slide.css
@@ -1,24 +1,32 @@
-.block { 
-  height:300px;
-  width:300px;
-  background-color:orange;
-  margin-top:50px;
+.block {
+  height: 300px;
+  width: 300px;
+  background-color: orange;
+  margin-top: 50px;
 }
 
 .animBlock {
   opacity: 0;
   filter: alpha(opacity=0);
   position: relative;
-  -webkit-transition: all .55s ease-in;
-  -moz-transition: all .55s ease-in;
-  -ms-transition: all .55s ease-in;
-  -o-transition: all .55s ease-in;
-  transition: all .55s ease-in;
+  -webkit-transition: all 0.55s ease-in;
+  -moz-transition: all 0.55s ease-in;
+  -ms-transition: all 0.55s ease-in;
+  -o-transition: all 0.55s ease-in;
+  transition: all 0.55s ease-in;
 }
-.animBlock[data-position="left"] { left: -20%; }
-.animBlock[data-position="right"] { right: -20%; }
-.animBlock[data-position="top"] { top: -20%;}
-.animBlock[data-position="bottom"] { bottom: -20%;}
+.animBlock[data-position="left"] {
+  left: -20%;
+}
+.animBlock[data-position="right"] {
+  right: -20%;
+}
+.animBlock[data-position="top"] {
+  top: -20%;
+}
+.animBlock[data-position="bottom"] {
+  bottom: -20%;
+}
 
 .animBlock[data-position="left"].viewed {
   left: 0%;
